dataset1235/2025-2/1955397009/users/759958373/executions/3933884819_2862582401.log
== RUN (2025-08-26 13:18:00)
-- CODE: 
objeto = input()
vezes = int(input())
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
None
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
None
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
None
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
None
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
None
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 13:17:06)
-- CODE: 
objeto = input()
vezes = int(input())
print(Abra, )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Abra, )
          ^^^^
NameError: name 'Abra' is not defined
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Abra, )
          ^^^^
NameError: name 'Abra' is not defined
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Abra, )
          ^^^^
NameError: name 'Abra' is not defined
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Abra, )
          ^^^^
NameError: name 'Abra' is not defined
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Abra, )
          ^^^^
NameError: name 'Abra' is not defined
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(Abra, )
          ^^^^
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 13:25:20)
-- CODE: 
objeto = input()+" "
vezes = int(input())
print(("Abra " + objeto) *vezes)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
Abra casa Abra casa Abra casa
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
Abra porta Abra porta Abra porta Abra porta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 13:15:49)
-- CODE: 
objeto = input()

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
None
-- TEST CASE 2:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
None
-- TEST CASE 3:
---- input:
sacola
6
---- correct output:
Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola Abra sacola
---- user output:
None
-- TEST CASE 4:
---- input:
casa
3
---- correct output:
Abra casa Abra casa Abra casa
---- user output:
None
-- TEST CASE 5:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
None
-- TEST CASE 6:
---- input:
porta
4
---- correct output:
Abra porta Abra porta Abra porta Abra porta
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
